# projeto_semear18

./: .gitignore  CMakeLists.txt  documentação_testes  ieee_open2019.ttt  ieee_open_2018.ttt  package.xml  setup.py
action/: changeIntersection.action  goFromDockToIntersection.action  goToContainer.action  goToFirstPose.action  moveEletroima.action  navigation.action  setEletroima.action
arduino code/: motores.ino  sensores.ino  sensores_teste.ino
arduino code/ieee_elevadores/: ieee_elevadores.ino
arduino code/ieee_motores/: ieee_motores.ino
arduino code/ieee_sensores/: ieee_sensores.ino
arduino code/ieee_sensores_RGB/: ieee_sensores_RGB.ino
arduino code/ieee_sensores_Ultrassom/: ieee_sensores_Ultrassom.ino
arduino/fast_pwm_test/: fast_pwm_test.ino  fast_pwm_test.txt
arduino/motorCode/: motorCode.ino
arduino/sensorCode/: sensorCode.ino  sensores.ino
arduino/sensorCode2/: sensorCode2.ino
arduino/sensorCode3/: sensorCode3.ino
arduino/sensorCode_py/: sensorCode_py.ino
arduino/testar_eletroima/: testar_eletroima.ino
arduino/testar_encoder_motorDC_garra/: testar_encoder_motorDC_garra.ino
arduino/testar_infravermelhos_base/: testar_infravermelhos_base.ino
arduino/testar_motores_base/: testar_motores_base.ino
arduino/testar_placa_sensores_completa/: testar_placa_sensores_completa.ino
arduino/testar_servo/: testar_servo.ino
include/projeto_semear/: arduino_interface.h  kine_control.h  rotary_encoder.h
launch/: actions.launch  arduino.launch  basico.launch  pid.launch  simuladorInterface.launch  teste.launch
msg/: ArduinoRGB.msg  Colors.msg  Enable_Placa_Elevadores.msg  Enable_Placa_Sensores.msg  Infra_Placa_Elevadores.msg  Infra_Placa_Sensores.msg  PololuLineSensor.msg  Pose.msg  ServoPose.msg  Sonar_Infra_Placa_Sensores.msg  Vel.msg  Vel_Elevadores.msg
param/: pid.yaml  pidSensor.yaml
projeto_semear/: __init__.py  clawLib.py  motorControlLib.py  statesLib.py  utils.py
rasp/: motorCode.cpp  publishEncoder.cpp  rotary_encoder.cpp  sensorCode.cpp  serialTestMotor.cpp
robot_description/: CMakeLists.txt  package.xml
robot_description/launch/: robot.launch
robot_description/meshes/: base_superior.dae  chassis.dae
robot_description/robot/: robot.urdf.xacro
robot_description/urdf/: base.gazebo.xacro  base.urdf.xacro  claw.urdf.xacro  wheel.urdf.xacro
robot_hardware/: CMakeLists.txt  package.xml
robot_hardware/launch/: pid.launch  turn_on.launch
robot_hardware/param/: pid.yaml  pidSensor.yaml
robot_hardware/rasp/: encoderLib.cpp  publishEncoder.cpp
robot_hardware/src/: arduinoInterfaceLib.cpp  motorCode.cpp  sensorCode.cpp  sensorCode.py  sensorCode2.cpp
robot_hardware/test/: checkEncoder.py  encoder.ino  servo.ino  testar_enable_garra.cpp  testar_movimento_base.cpp  testar_movimento_garra.cpp  testar_sensores_garra.cpp
robot_interface/: CMakeLists.txt  package.xml
robot_interface/include/robot_interface/: kine_control.h  rotary_encoder.h
robot_interface/src/: arduino_interface.cpp  motorCode.cpp  sensorCode.cpp
robot_strategy/: CMakeLists.txt  package.xml  setup.py
robot_strategy/include/robot_strategy/: arduinoInterfaceLib.h  lineSensorLib.h  motorControlLib.h  stateLib.h
robot_strategy/launch/: pid.launch  rqt_sensor.launch  setMoveBase.launch  setUpSimulator.launch  simuladorInterface.launch  start.launch  teste.launch  turn_on_nodes.launch
robot_strategy/robot_strategy/: clawLib.py  containerSensorsLib.py  lineSensors.py  motorControlLib.py  statesLib.py  utils.py
robot_strategy/scripts/: main.py
robot_strategy/scripts/test/: cmd_motor.py  debug_clawLib.py  debug_container.py  debug_gopro.py  debug_lineSensorsLib.py  debug_linesensor.py  debug_motorControlLib_align.py  debug_pid.py  debug_planner.py  full_cicle.py  test_clawLib.py
robot_strategy/src/: arduinoInterfaceLib.cpp  lineSensorLib.cpp  main.cpp  motorCode.cpp  motorControlLib.cpp  stateLib.cpp  testar_claw.cpp  testar_gpio.cpp  testar_lineSensor.cpp  testar_movimento_base.cpp  testar_states.cpp
scripts/: changeIntersection.py  containerSensorsLib.py  goFromBlueToGreenIntersection.py  goFromContainerToIntersection.py  goFromDockToIntersection.py  goFromGreenToBlueIntersection.py  goToBlueDock.py  goToContainer.py  goToDock.py  goToFirstPose.py  goToGreenDock.py  goToTrain.py  lineSensors.py  main.py  motorControlLib.py  utils.py
scripts/test/: cmd_claw.py  cmd_motor.py  debug_base_pololu_sensors.py
simulation_interface/: CMakeLists.txt  package.xml
simulation_interface/src/: convert_colorsensor.cpp  eletroimaInterface.cpp  raspEncoderConversion.cpp
simulation_interface_code/: arduinoMotorConversion.cpp  eletroimaInterface.cpp  raspEncoderConversion.cpp
src/: arduino_interface.cpp  convert_colorsensor.cpp  depositar_client.cpp  depositar_container.cpp  depositar_server.cpp  descobrir_cor.cpp  descobrir_cor_demo.cpp  descobrir_cor_server.cpp  eletroima_control_demo.cpp  eletroima_control_server.cpp  escolher_container.cpp  escolher_container_demo.cpp  estrategia_server.cpp  gps.cpp  gps_demo.cpp  interface_arduino.cpp  interface_arduino_elevadores.cpp  interface_arduino_motores.cpp  interface_arduino_sensores_rgb.cpp  interface_arduino_sensores_sonar.cpp  kine_control.cpp  kine_control_demo.cpp  linha_preta.cpp  main.cpp  mapa_container_demo.cpp  mapa_container_server.cpp  motorCode.cpp  navigating_demo.cpp  navigating_server.cpp  navigating_server_demo.cpp  path_planning_demo.cpp  path_planning_server.cpp  pegar_container.cpp  pegar_server.cpp  pid_demo.cpp  positioning_system.cpp  positioning_system_demo.cpp  sensorCode.cpp  transicao_demo.cpp
src/Testes/: eletroima_control_demo.cpp
src/test/: pid_demo.cpp
src/tests/: escolher_container_demo.cpp  kine_control_demo.cpp  pid_demo.cpp
srv/: DepositarContainer.srv  DescobrirCor.srv  EscolherContainer.srv  GetContainerInfo.srv  GetPose.srv  MoveContainer.srv  PathPlanning.srv  PegarContainer.srv  SetContainer.srv  Strategy.srv
test/: pololu.ino
